# iot-gateway-nuttx

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  Readme.md
cmake/: phigw.cmake
jlink/: phigw-bl.jlink  phigw-erase.jlink  phigw.jlink
nuttx-export-10.0.1-arm/: .config  System.map
nuttx-export-10.0.1-arm/include/netutils/: netinit.h
nuttx-export-10.0.1-arm/registry/: flash_eraseall.bdat  flash_eraseall.pdat  nsh.bdat  phigw.bdat  ping.bdat  sh.bdat
nuttx-export-10.0.1-arm/scripts/: ld.script  memory.ld
src/: CMakeLists.txt  Capture.cpp  Capture.h  Leds.cpp  Leds.h  ModbusUtils.cpp  ModbusUtils.h  MqttClient.cpp  MqttClient.h  Payload.cpp  Payload.h  PhiGateway.cpp  PhiGateway.h  Tls.cpp  Tls.h  Transmission.cpp  Transmission.h  Utils.cpp  Utils.h  defs.h  main.cpp  phi-gw.code-workspace  version.h
src/data/: CaptureInfo.h  ConfigData.cpp  ConfigData.h  Configuration.cpp  Configuration.h  Connection.h  ModbusConnInfo.h  ModbusInfo.h  ModbusRegister.cpp  ModbusRegister.h  MqttInfo.h  NetworkInfo.h  ProductInfo.h  ProtocolMqttInfo.h  SimCardInfo.h  SlaveInfo.h  SlaveMap.cpp  SlaveMap.h  Status.h  SystemData.cpp  SystemData.h  TransmissionInfo.h  WiFiInfo.h
src/manager/: Manager.cpp  Manager.h
src/manager/commands/: CertCommand.cpp  CertCommand.h  CommandIF.h  ConfigCommand.cpp  ConfigCommand.h  DatetimeCommand.cpp  DatetimeCommand.h  DeviceIdCommand.cpp  DeviceIdCommand.h  EthernetCommand.cpp  EthernetCommand.h  GsmCommand.cpp  GsmCommand.h  ModbusCommand.cpp  ModbusCommand.h  ModbusReadCommand.cpp  ModbusReadCommand.h  ModbusWriteCommand.cpp  ModbusWriteCommand.h  MqttCommand.cpp  MqttCommand.h  OperationCommand.cpp  OperationCommand.h  ScanGeneralCommand.cpp  ScanGeneralCommand.h  ScanMapCommand.cpp  ScanMapCommand.h  StatusCommand.cpp  StatusCommand.h  SystemCommand.cpp  SystemCommand.h  UpdateCommand.cpp  UpdateCommand.h  WifiCommand.cpp  WifiCommand.h
src/network/: Ethernet.cpp  Ethernet.h  NetworkIF.cpp  NetworkIF.h  Wifi.cpp  Wifi.h
